java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testAddCastHintDoNotPropose-hints.pass
Create Method undefined() in org.netbeans.test.java.hints.AddCastDoNotPropose
